[tool.poetry]
name = "refitt"
version = "0.26.1"
description = "Recommender Engine for Intelligent Transient Tracking"
readme = "README.rst"
homepage = "https://refitt.org"
documentation = "https://refitt.readthedocs.io"
repository = "https://github.com/refitt/refitt"
authors = [
    "Dan Milisavljevic <dmilisav@purdue.edu>",
    "Niharika Sravan <nsravan@purdue.edu>",
    "Geoffrey Lentner <glentner@purdue.edu>",
    "Mark Linvill <mlinvill@purdue.edu>",
    "Bhagya Subrayan <bsubraya@purdue.edu>",
    "Katie Weil <keweil@purdue.edu>",
    "Josh Church <church10@purdue.edu>",
    "John Banovetz <jbanovet@purdue.edu>",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Astronomy",
    "License :: OSI Approved :: Apache Software License",
]

[tool.poetry.scripts]
refitt = "refitt.apps.refitt:main"
refittd = "refitt.apps.refittd:main"
refittctl = "refitt.apps.refittctl:main"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
numpy = "^1.23.2"
scipy = "^1.9.1"
pandas = "^1.4.4"
h5py = "^3.7.0"
tables = "^3.7.0"
pyarrow = "^9.0.0"
SQLAlchemy = "^1.4.40"
psycopg2 = "^2.9.3"
Flask = "^2.2.2"
gunicorn = "^20.1.0"
requests = "^2.28.1"
cryptography = "^37.0.4"
cmdkit = "^2.6.1"
toml = "^0.10.2"
tomlkit = "^0.11.4"
PyYAML = "^6.0"
streamkit = "^0.3.2"
names-generator = "^0.1.0"
astropy = "^5.1"
antares-client = "^1.2.0"
slackclient = "^2.9.4"
matplotlib = "^3.5.3"
seaborn = "^0.11.2"
rich = "^12.5.1"
tensorflow = "^2.10.1"
astroplan = "^0.8"
timezonefinder = "^6.1.1"
pytz = "^2022.2.1"
bs4 = "^0.0.1"
Jinja2 = "^3.1.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
pytest-cov = "^3.0.0"
hypothesis = "^6.54.4"
ipython = "^8.4.0"
Sphinx = "^5.1.1"
snakeviz = "^2.1.1"
line-profiler = "^3.5.1"
memory-profiler = "^0.60.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = ["--strict-markers", ]
markers = [
    "unit: Unit tests are short, interface driven tests on discrete components.",
    "integration: Integration tests are often longer and deal with the interaction between systems.",
    "parameterize: Place holder for parameterized tests (not a real type).",
]
