[tool.poetry]
name = "refitt"
version = "0.26.1"
description = "Recommender Engine for Intelligent Transient Tracking"
readme = "README.rst"
homepage = "https://refitt.org"
documentation = "https://refitt.readthedocs.io"
repository = "https://github.com/refitt/refitt"
authors = [
    "Dan Milisavljevic <dmilisav@purdue.edu>",
    "Niharika Sravan <nsravan@purdue.edu>",
    "Geoffrey Lentner <glentner@purdue.edu>",
    "Mark Linvill <mlinvill@purdue.edu>",
    "Bhagya Subrayan <bsubraya@purdue.edu>",
    "Katie Weil <keweil@purdue.edu>",
    "Josh Church <church10@purdue.edu>",
    "John Banovetz <jbanovet@purdue.edu>",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Astronomy",
    "License :: OSI Approved :: Apache Software License",
]

[tool.poetry.scripts]
refitt = "refitt.apps.refitt:main"
refittd = "refitt.apps.refittd:main"
refittctl = "refitt.apps.refittctl:main"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
numpy = "^1.24.3"
scipy = "^1.10.1"
pandas = "^2.0.2"
h5py = "^3.8.0"
tables = "^3.8.0"
pyarrow = "^14.0.1"
tensorflow = {version = "^2.12.0", platform = "linux"}
tensorflow-macos = {version = "^2.12.0", platform = "darwin"}
sqlalchemy = "^2.0.16"
psycopg2 = {version = "^2.9.6", platform = "linux"}
psycopg2-binary = {version = "^2.9.6", platform = "darwin"}
flask = "^3.0.0"
gunicorn = "^21.2.0"
requests = "^2.31.0"
cryptography = "^41.0.1"
cmdkit = "^2.7.3"
toml = "^0.10.2"
tomlkit = "^0.12.1"
pyyaml = "^6.0"
streamkit = "^0.3.2"
names-generator = "^0.1.0"
astropy = "^6.0.0"
antares-client = "^1.2.0"
slackclient = "^2.9.4"
matplotlib = "^3.7.1"
seaborn = "^0.13.0"
rich = "^13.4.2"
astroplan = "^0.9.1"
timezonefinder = "^6.2.0"
pytz = "^2023.3"
bs4 = "^0.0.1"
jinja2 = "^3.1.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"
pytest-cov = "^4.1.0"
hypothesis = "^6.78.2"
ipython = "^8.14.0"
sphinx = "^7.0.1"
line-profiler = "^4.0.3"
memory-profiler = "^0.61.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = ["--strict-markers", ]
markers = [
    "unit: Unit tests are short, interface driven tests on discrete components.",
    "integration: Integration tests are often longer and deal with the interaction between systems.",
    "parameterize: Place holder for parameterized tests (not a real type).",
]
